Fixes sidebar component gap

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,7 +1,7 @@
 @import "../theme/jams/base.css";
 
 @utility sidebar {
-    @apply p-6 border-x border-core-200 dark:border-core-900 max-h-dvh sticky overflow-y-auto gap-y-8;
+    @apply p-6 border-x border-core-200 dark:border-core-900 max-h-dvh sticky overflow-y-auto gap-5;
     background-color: light-dark(
         var(--core-0),
         var(--core-1000)
